Fix resolve wrong NameClass to EntityType.